// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reactions 1`] = `
Map {
  "dg~D@MBdie]v\\\\kahHBjh@@" => {
    "asProduct": undefined,
    "asReagent": false,
    "idCode": "dg~D@MBdie]v\\\\kahHBjh@@",
    "info": {
      "charge": 0,
      "em": 193.11027872702,
      "mf": "C11H15NO2",
      "mw": 193.24271923500675,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  2  0  0  0  0
  5  6  1  0  0  0  0
  6  7  2  0  0  0  0
  7  8  1  0  0  0  0
  8  9  2  0  0  0  0
  4  9  1  0  0  0  0
  7 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
  6 12  1  0  0  0  0
  2 13  1  0  0  0  0
 13 14  1  0  0  0  0
M  END
",
  },
  "dg~DBMBmeJYW]gJxZB@jj@@" => {
    "asProduct": false,
    "asReagent": true,
    "idCode": "dg~DBMBmeJYW]gJxZB@jj@@",
    "info": {
      "charge": 1,
      "em": 194.11810375925,
      "mf": "C11H16NO2(+)",
      "mw": 194.2506599890625,
      "mz": 194.11755517934094,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
   34.6674   -4.4294   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
   34.4007   -5.9055   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   36.1537   -4.2269   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   35.7222   -6.6153   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   33.1254   -6.6951   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   36.8056   -5.5779   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
   35.7683   -8.1146   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   33.1714   -8.1944   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   34.4929   -8.9041   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   31.8960   -8.9839   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   31.9421  -10.4832   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   30.6667  -11.2727   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
   33.2635  -11.1930   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   30.7127  -12.7720   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
 12 11  1  0  0  0  0
M  CHG  1  12   1
M  END
",
  },
  "dg~DBMB\`eJYW]gJxZB@jj@@" => {
    "asProduct": false,
    "asReagent": true,
    "idCode": "dg~DBMB\`eJYW]gJxZB@jj@@",
    "info": {
      "charge": 1,
      "em": 194.11810375925,
      "mf": "C11H16NO2(+)",
      "mw": 194.2506599890625,
      "mz": 194.11755517934094,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
  1  2  1  0  0  0  0
M  CHG  1   1   1
M  END
",
  },
  "dg~DBMB\`eJYWugJxZB@jj@@" => {
    "asProduct": false,
    "asReagent": true,
    "idCode": "dg~DBMB\`eJYWugJxZB@jj@@",
    "info": {
      "charge": 1,
      "em": 194.11810375925,
      "mf": "C11H16NO2(+)",
      "mw": 194.2506599890625,
      "mz": 194.11755517934094,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
  6  3  1  0  0  0  0
M  CHG  1   6   1
M  END
",
  },
  "dg~DBMBmyJYW]gJxZB@jj@@" => {
    "asProduct": false,
    "asReagent": true,
    "idCode": "dg~DBMBmyJYW]gJxZB@jj@@",
    "info": {
      "charge": -1,
      "em": 192.10245369479,
      "mf": "C11H14NO2(-)",
      "mw": 192.23477848095098,
      "mz": 192.10300227469907,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
   34.6674   -4.4294   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
   34.4007   -5.9055   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   36.1537   -4.2269   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   35.7222   -6.6153   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   33.1254   -6.6951   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   36.8056   -5.5779   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
   35.7683   -8.1146   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   33.1714   -8.1944   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   34.4929   -8.9041   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   31.8960   -8.9839   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   31.9421  -10.4832   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   30.6667  -11.2727   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
   33.2635  -11.1930   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   30.7127  -12.7720   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
 12 11  1  0  0  0  0
M  CHG  1  12  -1
M  END
",
  },
  "eF\`BL@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "eF\`BL@",
    "info": {
      "charge": 0,
      "em": 31.04219916558,
      "mf": "CH5N",
      "mw": 31.057142878459935,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

  2  1  0  0  0  0  0  0  0  0999 V2000
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
M  END
",
  },
  "dclDB@iYRfUw\\\\kahHBj@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dclDB@iYRfUw\\\\kahHBj@@",
    "info": {
      "charge": 1,
      "em": 163.07590459367,
      "mf": "C10H11O2(+)",
      "mw": 163.1935171106026,
      "mz": 163.07535601376094,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 12 13  0  0  0  0  0  0  0  0999 V2000
    3.6720    2.4781   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641    1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.6665    2.5827   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981    1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.0733    1.6691   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  1  11   1
M  END
",
  },
  "dk^D@MBdie]vrnF\`\`Jj@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dk^D@MBdie]vrnF\`\`Jj@@",
    "info": {
      "charge": 0,
      "em": 179.09462866255998,
      "mf": "C10H13NO2",
      "mw": 179.21610183015991,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 13 14  0  0  0  0  0  0  0  0999 V2000
    3.6720    2.4781   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641    1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.6665    2.5827   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981    1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.0733    1.6691   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660    1.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  END
",
  },
  "fHT\`@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "fHT\`@",
    "info": {
      "charge": 1,
      "em": 15.02347509669,
      "mf": "CH3(+)",
      "mw": 15.03455815890258,
      "mz": 15.02292651678093,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

  1  0  0  0  0  0  0  0  0  0999 V2000
    0.0000   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
M  CHG  1   1   1
M  END
",
  },
  "dg^D@MBdie_V^F\`\`Jj@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^D@MBdie_V^F\`\`Jj@@",
    "info": {
      "charge": 0,
      "em": 195.12592879148,
      "mf": "C11H17NO2",
      "mw": 195.25860074311828,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    6.9282   -3.5000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -2.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  END
",
  },
  "dg^DAMBlfiRfU}YxZB@jh@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^DAMBlfiRfU}YxZB@jh@@",
    "info": {
      "charge": 2,
      "em": 195.12592879148,
      "mf": "C11H17NO2(+2)",
      "mw": 195.25860074311828,
      "mz": 97.56241581583093,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    6.9282   -3.5000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -2.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   2   1
M  END
",
  },
  "dg^D@MBdin_V^F\`\`Jj@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^D@MBdin_V^F\`\`Jj@@",
    "info": {
      "charge": 0,
      "em": 195.12592879148,
      "mf": "C11H17NO2",
      "mw": 195.25860074311828,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    4.3301   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -2.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  END
",
  },
  "dg^DAMBdfiRfy}YxZB@jh@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^DAMBdfiRfy}YxZB@jh@@",
    "info": {
      "charge": 2,
      "em": 195.12592879148,
      "mf": "C11H17NO2(+2)",
      "mw": 195.25860074311828,
      "mz": 97.56241581583093,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    4.3301   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -2.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   3   1
M  END
",
  },
  "fI@@" => {
    "asProduct": true,
    "asReagent": undefined,
    "idCode": "fI@@",
    "info": {
      "charge": 0,
      "em": 18.01056468403,
      "mf": "H2O",
      "mw": 18.015286432429832,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

  1  0  0  0  0  0  0  0  0  0999 V2000
    0.0000   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
M  END
",
  },
  "dknHAEAIrTim]Y[j@Bj\`@@" => {
    "asProduct": true,
    "asReagent": undefined,
    "idCode": "dknHAEAIrTim]Y[j@Bj\`@@",
    "info": {
      "charge": 2,
      "em": 177.11536410745,
      "mf": "C11H15NO(+2)",
      "mw": 177.24331431068845,
      "mz": 88.55713347381594,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 13 13  0  0  0  0  0  0  0  0999 V2000
    9.0933   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  6  1  0  0  0  0
  5  7  2  0  0  0  0
  6  8  2  0  0  0  0
  8  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 10 12  1  0  0  0  0
 11 13  1  0  0  0  0
  7  8  1  0  0  0  0
M  CHG  2   3   1   4   1
M  END
",
  },
  "dg^D@MBldTRVaTWCPPEU@@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^D@MBldTRVaTWCPPEU@@@",
    "info": {
      "charge": 0,
      "em": 195.12592879148,
      "mf": "C11H17NO2",
      "mw": 195.25860074311828,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
   11.6913   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    9.0933   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  END
",
  },
  "dg^DAMBlfiRfUwYxZB@jh@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^DAMBlfiRfUwYxZB@jh@@",
    "info": {
      "charge": 2,
      "em": 195.12592879148,
      "mf": "C11H17NO2(+2)",
      "mw": 195.25860074311828,
      "mz": 97.56241581583093,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
   11.6913   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    9.0933   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   2   1
M  END
",
  },
  "dg^D@MBdin]v^F\`\`Jj@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^D@MBdin]v^F\`\`Jj@@",
    "info": {
      "charge": 0,
      "em": 195.12592879148,
      "mf": "C11H17NO2",
      "mw": 195.25860074311828,
      "mz": undefined,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    9.0933   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    9.0933   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  END
",
  },
  "dg^DAMBdfiRfywYxZB@jh@@" => {
    "asProduct": true,
    "asReagent": true,
    "idCode": "dg^DAMBdfiRfywYxZB@jh@@",
    "info": {
      "charge": 2,
      "em": 195.12592879148,
      "mf": "C11H17NO2(+2)",
      "mw": 195.25860074311828,
      "mz": 97.56241581583093,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    9.0933   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    9.0933   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   3   1
M  END
",
  },
  "dknHAEAIrTimWY[j@Bj\`@@" => {
    "asProduct": true,
    "asReagent": undefined,
    "idCode": "dknHAEAIrTimWY[j@Bj\`@@",
    "info": {
      "charge": 2,
      "em": 177.11536410745,
      "mf": "C11H15NO(+2)",
      "mw": 177.24331431068845,
      "mz": 88.55713347381594,
    },
    "molfile": "
Actelion Java MolfileCreator 1.0

 13 13  0  0  0  0  0  0  0  0999 V2000
    4.3301   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -3.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  6  1  0  0  0  0
  5  7  2  0  0  0  0
  6  8  2  0  0  0  0
  7  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 10 12  1  0  0  0  0
 11 13  1  0  0  0  0
  7  8  1  0  0  0  0
M  CHG  2   3   1   4   1
M  END
",
  },
}
`;

exports[`Reactions 2`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "depth": 3,
                "isValid": true,
                "molecules": [
                  {
                    "asProduct": true,
                    "asReagent": undefined,
                    "idCode": "dknHAEAIrTim]Y[j@Bj\`@@",
                    "info": {
                      "charge": 2,
                      "em": 177.11536410745,
                      "mf": "C11H15NO(+2)",
                      "mw": 177.24331431068845,
                      "mz": 88.55713347381594,
                    },
                    "molfile": "
Actelion Java MolfileCreator 1.0

 13 13  0  0  0  0  0  0  0  0999 V2000
    9.0933   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  6  1  0  0  0  0
  5  7  2  0  0  0  0
  6  8  2  0  0  0  0
  8  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 10 12  1  0  0  0  0
 11 13  1  0  0  0  0
  7  8  1  0  0  0  0
M  CHG  2   3   1   4   1
M  END
",
                  },
                ],
                "reaction": {
                  "description": "Fig 22 a.",
                  "doi": "https://doi.org/10.1039/C5NP00073D",
                  "ionization": "[M+H]+",
                  "kind": "reaction",
                  "label": "Inductive cleavage",
                  "reaction": "CMF",
                  "rxnCode": "eFH\`fLD!fI@D fHT\`P#Qd a\` QP#!R@AL]Bgp !RGQi| !RGSi|",
                  "section": "6.1.1",
                },
              },
            ],
            "depth": 2,
            "isValid": true,
            "molecules": [
              {
                "asProduct": true,
                "asReagent": true,
                "idCode": "dg^DAMBlfiRfU}YxZB@jh@@",
                "info": {
                  "charge": 2,
                  "em": 195.12592879148,
                  "mf": "C11H17NO2(+2)",
                  "mw": 195.25860074311828,
                  "mz": 97.56241581583093,
                },
                "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
    6.9282   -3.5000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.0622   -2.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   2   1
M  END
",
              },
            ],
            "reaction": {
              "description": "Fig 22 a.",
              "doi": "https://doi.org/10.1039/C5NP00073D",
              "ionization": "[M+H]+",
              "kind": "reaction",
              "label": "Inductive cleavage",
              "reaction": "CMF",
              "rxnCode": "eFH\`fLD!fI@D fHT\`P#Qd a\` QP#!R@AL]Bgp !RGQi| !RGSi|",
              "section": "6.1.1",
            },
          },
        ],
        "depth": 1,
        "isValid": true,
        "molecules": [
          {
            "asProduct": false,
            "asReagent": true,
            "idCode": "dg~DBMB\`eJYW]gJxZB@jj@@",
            "info": {
              "charge": 1,
              "em": 194.11810375925,
              "mf": "C11H16NO2(+)",
              "mw": 194.2506599890625,
              "mz": 194.11755517934094,
            },
            "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
  1  2  1  0  0  0  0
M  CHG  1   1   1
M  END
",
          },
        ],
        "reaction": {
          "description": "",
          "doi": "https://doi.org/10.1186/1477-5956-10-S1-S8",
          "ionization": "[M+H]+",
          "kind": "ionization",
          "label": "Ionization",
          "reaction": "",
          "rxnCode": "eMHBN\`vjMPp_yE{P!eFH\`fLGtP#QR QX#!R@BM_HqvJo@ !R_tp]Ngp",
          "section": "",
        },
      },
      {
        "children": [
          {
            "children": [
              {
                "depth": 3,
                "isValid": true,
                "molecules": [
                  {
                    "asProduct": true,
                    "asReagent": undefined,
                    "idCode": "dknHAEAIrTimWY[j@Bj\`@@",
                    "info": {
                      "charge": 2,
                      "em": 177.11536410745,
                      "mf": "C11H15NO(+2)",
                      "mw": 177.24331431068845,
                      "mz": 88.55713347381594,
                    },
                    "molfile": "
Actelion Java MolfileCreator 1.0

 13 13  0  0  0  0  0  0  0  0999 V2000
    4.3301   -3.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -3.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  6  1  0  0  0  0
  5  7  2  0  0  0  0
  6  8  2  0  0  0  0
  7  9  1  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 10 12  1  0  0  0  0
 11 13  1  0  0  0  0
  7  8  1  0  0  0  0
M  CHG  2   3   1   4   1
M  END
",
                  },
                ],
                "reaction": {
                  "description": "Fig 22 a.",
                  "doi": "https://doi.org/10.1039/C5NP00073D",
                  "ionization": "[M+H]+",
                  "kind": "reaction",
                  "label": "Inductive cleavage",
                  "reaction": "CMF",
                  "rxnCode": "eFH\`fLD!fI@D fHT\`P#Qd a\` QP#!R@AL]Bgp !RGQi| !RGSi|",
                  "section": "6.1.1",
                },
              },
            ],
            "depth": 2,
            "isValid": true,
            "molecules": [
              {
                "asProduct": true,
                "asReagent": true,
                "idCode": "dg^DAMBlfiRfUwYxZB@jh@@",
                "info": {
                  "charge": 2,
                  "em": 195.12592879148,
                  "mf": "C11H17NO2(+2)",
                  "mw": 195.25860074311828,
                  "mz": 97.56241581583093,
                },
                "molfile": "
Actelion Java MolfileCreator 1.0

 14 14  0  0  0  0  0  0  0  0999 V2000
   11.6913   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
   10.3923   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    7.7942   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952   -3.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    9.0933   -0.0000   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.4952    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.8971   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.2990   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -2.2500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.7500   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  3  6  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  9 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
M  CHG  2   1   1   2   1
M  END
",
              },
            ],
            "reaction": {
              "description": "Fig 22 a.",
              "doi": "https://doi.org/10.1039/C5NP00073D",
              "ionization": "[M+H]+",
              "kind": "reaction",
              "label": "Inductive cleavage",
              "reaction": "CMF",
              "rxnCode": "eFH\`fLD!fI@D fHT\`P#Qd a\` QP#!R@AL]Bgp !RGQi| !RGSi|",
              "section": "6.1.1",
            },
          },
        ],
        "depth": 1,
        "isValid": true,
        "molecules": [
          {
            "asProduct": false,
            "asReagent": true,
            "idCode": "dg~DBMB\`eJYWugJxZB@jj@@",
            "info": {
              "charge": 1,
              "em": 194.11810375925,
              "mf": "C11H16NO2(+)",
              "mw": 194.2506599890625,
              "mz": 194.11755517934094,
            },
            "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301    0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  1  3  1  0  0  0  0
  2  4  2  0  0  0  0
  2  5  1  0  0  0  0
  4  7  1  0  0  0  0
  5  8  2  0  0  0  0
  7  9  2  0  0  0  0
  8 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
 11 13  1  0  0  0  0
 12 14  1  0  0  0  0
  4  6  1  0  0  0  0
  8  9  1  0  0  0  0
  6  3  1  0  0  0  0
M  CHG  1   6   1
M  END
",
          },
        ],
        "reaction": {
          "description": "",
          "doi": "https://doi.org/10.1186/1477-5956-10-S1-S8",
          "ionization": "[M+H]+",
          "kind": "ionization",
          "label": "Ionization",
          "reaction": "",
          "rxnCode": "eMHBN\`vjMPp_yE{P!eFH\`fLGtP#QR QX#!R@BM_HqvJo@ !R_tp]Ngp",
          "section": "",
        },
      },
    ],
    "depth": 0,
    "isValid": false,
    "molecules": [
      {
        "asProduct": undefined,
        "asReagent": false,
        "idCode": "dg~D@MBdie]v\\\\kahHBjh@@",
        "info": {
          "charge": 0,
          "em": 193.11027872702,
          "mf": "C11H15NO2",
          "mw": 193.24271923500675,
          "mz": undefined,
        },
        "molfile": "
Actelion Java MolfileCreator 1.0

 14 15  0  0  0  0  0  0  0  0999 V2000
    1.7321   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    1.7321   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    2.5981   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -0.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    5.1962   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    4.3301   -2.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    3.4641   -1.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -1.8090   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    6.7350   -1.0000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
    6.1472   -0.1910   -0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0
    0.8660   -0.0000   -0.0000 N   0  0  0  0  0  0  0  0  0  0  0  0
    0.0000   -0.5000   -0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
  1  2  1  0  0  0  0
  2  3  1  0  0  0  0
  3  4  1  0  0  0  0
  4  5  2  0  0  0  0
  5  6  1  0  0  0  0
  6  7  2  0  0  0  0
  7  8  1  0  0  0  0
  8  9  2  0  0  0  0
  4  9  1  0  0  0  0
  7 10  1  0  0  0  0
 10 11  1  0  0  0  0
 11 12  1  0  0  0  0
  6 12  1  0  0  0  0
  2 13  1  0  0  0  0
 13 14  1  0  0  0  0
M  END
",
      },
    ],
  },
]
`;
